--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "~7.1.3||~7.2.0||~7.3.0||~7.4.0",
         "magento/framework": ">=102.0.0",
         "hyva-themes/magento2-reset-theme":  "*",
-        "hyva-themes/magento2-theme-module": "*"
+        "hyva-themes/magento2-theme-module": "*",
+        "hyva-themes/magento2-email-module": "*"
     },
     "suggest": {
         "hyva-themes/magento2-review-graphql": "*"
