add magento2-graphql-token to composer require

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "magento/framework": ">=102.0.0",
         "hyva-themes/magento2-reset-theme":  "*",
         "hyva-themes/magento2-theme-module": "*",
-        "hyva-themes/magento2-email-module": "*"
+        "hyva-themes/magento2-email-module": "*",
+        "hyva-themes/magento2-graphql-tokens": "*"
     },
     "suggest": {
         "hyva-themes/magento2-review-graphql": "*"
