--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,12 +20,13 @@ test:integration:
     extends: .test:integration
     parallel:
         matrix:
-            # 2.4.0 fails due to a bug in dotmailer/dotmailer-magento2-extension integration tests
-            - MAGEVERSION: ['2.4.1', '2.4.5-p1']
+            # Note: 2.4.0 fails due to a bug in dotmailer/dotmailer-magento2-extension integration tests
+            - MAGEVERSION: ['2.4.5-p1']
 
 test:cypress:
     extends: .test:cypress
     parallel:
         matrix:
-            # The cypress tests do not pass on 2.4.0 because the customer API is missing the login feature
-            - MAGEVERSION: ['2.4.1', '2.4.5-p1']
+            # Note: The cypress tests do not pass on 2.4.0 because the customer API is missing the login feature
+            # Note: The cypress tests do not pass on 2.4.1 because the missing add coupon success message
+            - MAGEVERSION: ['2.4.5-p1']
